Home page overflow fixed and image size fixed

--- a/frontend/ecokart/src/index.css
+++ b/frontend/ecokart/src/index.css
@@ -40,6 +40,11 @@ code {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;     /* Firefox */
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 @keyframes fadeIn {
   from { opacity: 0; transform: scale(0.10); }
   to { opacity: 1; transform: scale(1); }
